# Softlight

./: .gitignore  ARCHITECTURE.md  CHANGES.md  CSP_FIX.md  HYBRID_SELECTOR_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  MODAL_HANDLING_FIX.md  PROFILE_IMPLEMENTATION.md  QUICKSTART.md  QUICK_TEST_GUIDE.md  README.md  SETUP_LINEAR.md  pyproject.toml  test_hybrid.py
datasets/add_issue_to_bug_20251105_112440/: description.txt  metadata.json
datasets/add_issue_to_project_20251105_111710/: description.txt  metadata.json
datasets/create_new_issue_20251105_111534/: description.txt  metadata.json
datasets/open_display_settings_20251105_112623/: description.txt  metadata.json
examples/: task_questions.json
softlight/: cli.py  main.py  orchestrator.py  orchestrator_hybrid.py  orchestrator_vision.py
softlight/actions/: __init__.py  browser_actions.py
softlight/agent/: __init__.py  agent.py  executor_agent.py  hybrid_instructor.py  instructor_agent.py  simple_executor.py  state_manager.py  vision_instructor.py
softlight/browserController/: __init__.py  browser_controller.py
softlight/capture/: __init__.py  screenshot_manager.py
softlight/core/config/: env.py  logger.py  secrets_functions.py
softlight/dataset/: __init__.py  dataset_manager.py
softlight/domProcessor/: __init__.py  dom_extractor.py  dom_serializer.py  element_info.py
softlight/state/: __init__.py  page_state.py
